--- a/src/mvc/model/server/persistence/data/connection.properties
+++ b/src/mvc/model/server/persistence/data/connection.properties
@@ -1,3 +1,3 @@
-url = jdbc:postgresql://127.0.0.1:5432/proyecto_estructuras
+url = jdbc:postgresql://localhost:5432/proyecto_estructuras
 user = postgres
 password = l33tsupa
